--- a/cameraview/build.gradle
+++ b/cameraview/build.gradle
@@ -17,7 +17,9 @@ android {
         versionCode 1
         versionName project.version
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        testInstrumentationRunnerArgument "filter", "com.otaliastudios.cameraview.tools.SdkExcludeFilter"
+        testInstrumentationRunnerArgument "filter", "" +
+                "com.otaliastudios.cameraview.tools.SdkExcludeFilter," +
+                "com.otaliastudios.cameraview.tools.SdkIncludeFilter"
     }
 
     buildTypes {
