--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # TODO 29 fails due to Mockito issues, probably reproducible locally.
+        # TODO 29 fails due to Mockito issues, probably reproducible locally
         # 22-28 work (some of them, with SdkExclude restrictions)
         EMULATOR_API: [22, 23, 24, 25, 26, 27, 28]
         include:
