--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,6 +64,7 @@ jobs:
         with:
           java-version: 1.8
       - name: Execute emulator tests
+        timeout-minutes: 20
         uses: reactivecircus/android-emulator-runner@v2.0.0
         with:
           api-level: ${{ matrix.EMULATOR_API }}
