--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
       matrix:
         # TODO 29 fails due to Mockito issues, probably reproducible locally
         # 22-28 work (some of them, with SdkExclude restrictions)
-        EMULATOR_API: [22, 23, 24, 25, 26, 27, 28]
+        EMULATOR_API: [21, 22, 23, 24, 25, 26, 27, 28]
         include:
           - EMULATOR_API: 28
             EMULATOR_ARCH: x86_64
@@ -57,6 +57,8 @@ jobs:
           - EMULATOR_API: 23
             EMULATOR_ARCH: x86
           - EMULATOR_API: 22
+            EMULATOR_ARCH: x86
+          - EMULATOR_API: 21
             EMULATOR_ARCH: x86
     steps:
       - uses: actions/checkout@v1
