--- a/cameraview/build.gradle
+++ b/cameraview/build.gradle
@@ -17,7 +17,9 @@ android {
         versionCode 1
         versionName project.version
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        testInstrumentationRunnerArgument "filter", "com.otaliastudios.cameraview.tools.SdkExcludeFilter"
+        testInstrumentationRunnerArgument "filter", "" +
+                "com.otaliastudios.cameraview.tools.SdkExcludeFilter," +
+                "com.otaliastudios.cameraview.tools.SdkIncludeFilter"
     }
 
     buildTypes {
@@ -241,17 +243,16 @@ task mergeCoverageReports(type: JacocoReport) {
     if (isCI) {
         // All these classes are tested by the integration tests that we are not able to
         // run on the CI emulator.
-        classFilter.add('**/com/otaliastudios/cameraview/engine/CameraEngine**.*')
-        classFilter.add('**/com/otaliastudios/cameraview/engine/Camera1Engine**.*')
-        classFilter.add('**/com/otaliastudios/cameraview/engine/Camera2Engine**.*')
-        classFilter.add('**/com/otaliastudios/cameraview/engine/action/**.*')
-        classFilter.add('**/com/otaliastudios/cameraview/engine/lock/**.*')
-        classFilter.add('**/com/otaliastudios/cameraview/engine/meter/**.*')
-        classFilter.add('**/com/otaliastudios/cameraview/picture/**.*')
-        classFilter.add('**/com/otaliastudios/cameraview/video/**.*')
-        // TODO these below could be easily testable ALSO outside of the integration tests
-        classFilter.add('**/com/otaliastudios/cameraview/orchestrator/**.*')
-        classFilter.add('**/com/otaliastudios/cameraview/video/encoding/**.*')
+        // classFilter.add('**/com/otaliastudios/cameraview/engine/CameraEngine**.*')
+        // classFilter.add('**/com/otaliastudios/cameraview/engine/Camera1Engine**.*')
+        // classFilter.add('**/com/otaliastudios/cameraview/engine/Camera2Engine**.*')
+        // classFilter.add('**/com/otaliastudios/cameraview/engine/action/**.*')
+        // classFilter.add('**/com/otaliastudios/cameraview/engine/lock/**.*')
+        // classFilter.add('**/com/otaliastudios/cameraview/engine/meter/**.*')
+        // classFilter.add('**/com/otaliastudios/cameraview/picture/**.*')
+        // classFilter.add('**/com/otaliastudios/cameraview/video/**.*')
+        // classFilter.add('**/com/otaliastudios/cameraview/orchestrator/**.*')
+        // classFilter.add('**/com/otaliastudios/cameraview/video/encoding/**.*')
     }
     // We don't test OpenGL filters.
     classFilter.add('**/com/otaliastudios/cameraview/filters/**.*')
