Egloo: create GlTextureDrawer

--- a/cameraview/build.gradle
+++ b/cameraview/build.gradle
@@ -48,6 +48,8 @@ dependencies {
     api 'androidx.lifecycle:lifecycle-common:2.1.0'
     api 'com.google.android.gms:play-services-tasks:17.0.0'
     implementation 'androidx.annotation:annotation:1.1.0'
+
+    implementation project(':egloo')
 }
 
 //endregion
