--- a/build.gradle
+++ b/build.gradle
@@ -8,17 +8,14 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.5.3'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
-
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.31"
-        classpath "org.jetbrains.dokka:dokka-android-gradle-plugin:0.9.17"
     }
-    ext.kotlinVersion = '1.3.31'
 }
 
 allprojects {
     repositories {
         jcenter()
         google()
+        maven { url 'https://jitpack.io' }
     }
 }
 
