--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,10 +11,11 @@ jobs:
       TRAVIS: true
       BINTRAY_USER: ${{ secrets.BINTRAY_USER }}
       BINTRAY_KEY: ${{ secrets.BINTRAY_KEY }}
+      BINTRAY_REPO: ${{ secrets.BINTRAY_REPO }}
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
         with:
           java-version: 1.8
       - name: Perform bintray upload
-        run: ./gradlew bintrayUpload
+        run: ./gradlew cameraview:publishToBintray
