Update Kotlin, Gradle and dependencies

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,9 +12,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
+      - uses: actions/setup-java@v2
         with:
-          java-version: 1.8
+          java-version: 11
+          distribution: temurin
+          cache: gradle
       - name: Perform base checks
         run: ./gradlew demo:assembleDebug cameraview:publishToDirectory --stacktrace
   ANDROID_UNIT_TESTS:
@@ -22,9 +24,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
+      - uses: actions/setup-java@v2
         with:
-          java-version: 1.8
+          java-version: 11
+          distribution: temurin
+          cache: gradle
       - name: Execute unit tests
         run: ./gradlew cameraview:runUnitTests --stacktrace
       - name: Upload unit tests artifact
@@ -58,9 +62,11 @@ jobs:
             EMULATOR_ARCH: x86
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
+      - uses: actions/setup-java@v2
         with:
-          java-version: 1.8
+          java-version: 11
+          distribution: temurin
+          cache: gradle
       - name: Execute emulator tests
         timeout-minutes: 30
         uses: reactivecircus/android-emulator-runner@v2.2.0
@@ -83,9 +89,11 @@ jobs:
     needs: [ANDROID_UNIT_TESTS, ANDROID_EMULATOR_TESTS]
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
+      - uses: actions/setup-java@v2
         with:
-          java-version: 1.8
+          java-version: 11
+          distribution: temurin
+          cache: gradle
       - name: Download unit tests artifact
         uses: actions/download-artifact@v1
         with:
