--- a/.github/workflows/build+deploy.yml
+++ b/.github/workflows/build+deploy.yml
@@ -4,7 +4,7 @@ name: Build
 on:
   push:
     branches:
-      - main
+      - mayowa/build-premise-cameraview-artifact
   pull_request:
 jobs:
   ANDROID_BASE_CHECKS:
@@ -18,7 +18,7 @@ jobs:
           distribution: temurin
           cache: gradle
       - name: Perform base checks
-        run: ./gradlew demo:assembleDebug cameraview:publishToDirectory --stacktrace
+        run: ./gradlew cameraview:publishToDirectory --stacktrace
   ANDROID_UNIT_TESTS:
     name: Unit Tests
     runs-on: ubuntu-latest
@@ -82,10 +82,15 @@ jobs:
         with:
           name: emulator_tests_${{ matrix.EMULATOR_API }}
           path: ./cameraview/build/coverage_input/android_tests
-  CODE_COVERAGE:
-    name: Code Coverage Report
+  MAVEN_UPLOAD:
+    name: Maven Upload
     runs-on: ubuntu-latest
-    needs: [ANDROID_UNIT_TESTS, ANDROID_EMULATOR_TESTS]
+    needs: [ANDROID_UNIT_TESTS, ANDROID_EMULATOR_TESTS, ANDROID_BASE_CHECKS]
+    env:
+      ARTIFACTORY_URL: https://premise.jfrog.io/premise
+      ARTIFACTORY_USERNAME: bot-travis-ci
+      ARTIFACTORY_PASSWORD: ${{ secrets.ARTIFACTORY_PASSWORD }}
+
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v2
@@ -93,27 +98,5 @@ jobs:
           java-version: 11
           distribution: temurin
           cache: gradle
-      - name: Download unit tests artifact
-        uses: actions/download-artifact@v1
-        with:
-          name: unit_tests
-          path: ./cameraview/build/coverage_input/unit_tests
-      - name: Download emulator tests artifact
-        uses: actions/download-artifact@v1
-        with:
-          # 27 is the EMULATOR_API with less SdkExclude annotations, and should have
-          # the best possible coverage.
-          name: emulator_tests_27
-          path: ./cameraview/build/coverage_input/android_tests
-      - name: Create merged coverage report
-        run: ./gradlew cameraview:computeCoverage
-      - name: Upload merged coverage report (GitHub)
-        uses: actions/upload-artifact@v1
-        with:
-          name: report
-          path: ./cameraview/build/coverage_output/xml
-      - name: Upload merged coverage report (Codecov)
-        uses: codecov/codecov-action@v1
-        with:
-          file: ./cameraview/build/coverage_output/xml/*
-          fail_ci_if_error: true
+      - name: Perform maven upload
+        run: ./gradlew artifactoryPublish
