--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,7 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+libraryVersion=2.7.2
+artifactId=cameraview
+groupId=com.otaliastudios.cameraview
